good website done

--- a/gutenberg/1.htm
+++ b/gutenberg/1.htm
@@ -16,7 +16,6 @@ h1 {margin: 2em auto;}
 h2 {line-height: 2em;}
 h3 {margin-top: 2em; margin-bottom: 1em;}
 
-/* p {margin-top: .51em; text-align: justify; margin-bottom: .49em; text-indent: 1em;} */
 p {margin-top: .51em; text-align: justify; margin-bottom: .49em; text-indent: 1em;}
 
 /* General */
@@ -83,7 +82,6 @@ a[title].pagenum:after {
 
 .figcenter {clear: both; margin: 2em auto; text-align: center; max-width: 100%;}
 
-/* img {max-width: 100%; width: 100%; height: auto;} */
 img {max-width: 100%; width: 100%; height: auto;}
 .fig100 {width: 100px;}
 .fig120 {width: 120px;}
@@ -198,7 +196,7 @@ Libraries.)
 
 <div class="hidehand">
 <div class="figcenter fig504">
-<img src="the_adventures_of_sherlock_holmes_files/cover.jpg" alt="Cover" width="504" height="800">
+<img src="1_files/cover.jpg" alt="Cover" width="504" height="800">
 </div>
 </div>
 
@@ -206,8 +204,8 @@ Libraries.)
 
 <hr class="chap">
 <div class="figcenter fig400"><a name="frontis" id="frontis"></a>
-<img src="the_adventures_of_sherlock_holmes_files/frontispiece.jpg" alt="Frontispiece" width="392" height="576">
-<div class="caption">“THE GENTLEMAN IN THE PEW HANDED IT UP TO HER”</div>
+<img src="1_files/frontispiece.jpg" alt="Frontispiece" width="392" height="576">
+<div class="caption nomb">“THE GENTLEMAN IN THE PEW HANDED IT UP TO HER”</div>
 <div class="caption2 nomt right">[Page 238</div>
 </div>
 
@@ -225,7 +223,7 @@ OF<br>
 <p class="title mt4"><small>ILLUSTRATED</small></p>
 
 <div class="figcenter fig120">
-<img src="the_adventures_of_sherlock_holmes_files/logo.jpg" alt="Logo" width="120" height="139">
+<img src="1_files/logo.jpg" alt="Logo" width="120" height="139">
 </div>
 
 <p class="title mt4">NEW YORK<br>
@@ -419,7 +417,7 @@ A SCANDAL IN BOHEMIA</h2>
 <h3>I</h3>
 
 <div class="fig100">
-  <img class="drop-cap" src="the_adventures_of_sherlock_holmes_files/drop_t.jpg" alt="" width="100" height="101">
+  <img class="drop-cap" src="1_files/drop_t.jpg" alt="" width="100" height="101">
 </div>
 
 <p class="first-para drop-cap">TO Sherlock Holmes she is always <em>the</em> woman. I have seldom heard
@@ -634,7 +632,7 @@ authoritative tap.</p>
 <p>“Come in!” said Holmes.</p>
 
 <div class="figcenter fig296"><a name="man" id="man"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus008a.jpg" alt="" width="296" height="600">
+<img src="1_files/illus008a.jpg" alt="" width="296" height="600">
 <div class="caption">“A MAN ENTERED”</div>
 </div>
 
@@ -1516,7 +1514,7 @@ title of <em>the</em> woman.</p>
 THE RED-HEADED LEAGUE</h2>
 
 <div class="fig100">
-  <img class="drop-cap" src="the_adventures_of_sherlock_holmes_files/drop_i.jpg" alt="" width="100" height="99">
+  <img class="drop-cap" src="1_files/drop_i.jpg" alt="" width="100" height="99">
 </div>
 
 <p class="first-para drop-cap">I HAD called upon my friend, Mr. Sherlock Holmes, one day in the autumn
@@ -1993,7 +1991,7 @@ body. Then I asked him who Mr. Duncan Ross was. He answered that the
 name was new to him.</p>
 
 <div class="figcenter fig400"><a name="door" id="door"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus040a.jpg" alt="" width="400" height="621">
+<img src="1_files/illus040a.jpg" alt="" width="400" height="621">
 <div class="caption">“THE DOOR WAS SHUT AND LOCKED”</div>
 </div>
 
@@ -2247,7 +2245,7 @@ kindly put your army revolver in your pocket.” He waved his hand,
 turned on his heel, and disappeared in an instant among the crowd.</p>
 
 <div class="figcenter fig384"><a name="all" id="all"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus046a.jpg" alt="" width="384" height="600">
+<img src="1_files/illus046a.jpg" alt="" width="384" height="600">
 <div class="caption">“ALL AFTERNOON HE SAT IN THE STALLS”</div>
 </div>
 
@@ -2586,7 +2584,7 @@ tout,’ as Gustave Flaubert wrote to Georges Sand.”</p>
 A CASE OF IDENTITY</h2>
 
 <div class="fig100">
-  <img class="drop-cap2" src="the_adventures_of_sherlock_holmes_files/drop_m.jpg" alt="" width="100" height="99">
+  <img class="drop-cap2" src="1_files/drop_m.jpg" alt="" width="100" height="99">
 </div>
 
 <p class="first-para drop-cap2">“MY dear fellow,” said Sherlock Holmes, as we sat on either side of
@@ -2763,7 +2761,7 @@ doubt travel a little, and indulge yourself in every way. I believe
 that a single lady can get on very nicely upon an income of about £60.”</p>
 
 <div class="figcenter fig450"><a name="sherlock" id="sherlock"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus060a.jpg" alt="" width="450" height="533">
+<img src="1_files/illus060a.jpg" alt="" width="450" height="533">
 <div class="caption">“SHERLOCK HOLMES WELCOMED HER”</div>
 </div>
 
@@ -3252,7 +3250,7 @@ girl’s short sight, he appears as Mr. Hosmer Angel, and keeps off other
 lovers by making love himself.”</p>
 
 <div class="figcenter fig400"><a name="glancing" id="glancing"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus072a.jpg" alt="" width="400" height="492">
+<img src="1_files/illus072a.jpg" alt="" width="400" height="492">
 <div class="caption">“GLANCING ABOUT HIM LIKE A RAT IN A TRAP”</div>
 </div>
 
@@ -3357,7 +3355,7 @@ much sense in Hafiz as in Horace, and as much knowledge of the world.”</p>
 THE BOSCOMBE VALLEY MYSTERY</h2>
 
 <div class="fig100">
-  <img class="drop-cap2" src="the_adventures_of_sherlock_holmes_files/drop_w.jpg" alt="" width="100" height="102">
+  <img class="drop-cap2" src="1_files/drop_w.jpg" alt="" width="100" height="102">
 </div>
 
 <p class="first-para drop-cap2">WE were seated at breakfast one morning, my wife and I, when the maid
@@ -3536,7 +3534,7 @@ which lies before us. There are one or two minor points which were
 brought out in the inquest, and which are worth considering.”</p>
 
 <div class="figcenter fig400"><a name="they" id="they"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus080a.jpg" alt="" width="400" height="654">
+<img src="1_files/illus080a.jpg" alt="" width="400" height="654">
 <div class="caption">“THEY FOUND THE BODY”</div>
 </div>
 
@@ -4012,7 +4010,7 @@ different points, Holmes desired to be led to the court-yard, from
 which we all followed the winding track which led to Boscombe Pool.</p>
 
 <div class="figcenter fig449"><a name="maid" id="maid"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus092a.jpg" alt="" width="449" height="400">
+<img src="1_files/illus092a.jpg" alt="" width="449" height="400">
 <div class="caption">“THE MAID SHOWED US THE BOOTS.”</div>
 </div>
 
@@ -4439,7 +4437,7 @@ black cloud which rests upon their past.</p>
 THE FIVE ORANGE PIPS</h2>
 
 <div class="fig100">
-  <img class="drop-cap2" src="the_adventures_of_sherlock_holmes_files/drop_w.jpg" alt="" width="100" height="102">
+  <img class="drop-cap2" src="1_files/drop_w.jpg" alt="" width="100" height="102">
 </div>
 
 <p class="first-para drop-cap2">WHEN I glance over my notes and records of the Sherlock Holmes cases
@@ -5173,7 +5171,7 @@ night, for their<a class="pagenum" name="Page_123" title="123"> </a> purpose. We
 the long run. I am going out now!”</p>
 
 <div class="figcenter fig439"><a name="holmes2" id="holmes2"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus122a.jpg" alt="" width="439" height="400">
+<img src="1_files/illus122a.jpg" alt="" width="439" height="400">
 <div class="caption">“‘HOLMES,’ I CRIED, ‘YOU ARE TOO LATE’”</div>
 </div>
 
@@ -5290,7 +5288,7 @@ upon it, and that is all which we shall ever know of the fate of the
 THE MAN WITH THE TWISTED LIP</h2>
 
 <div class="fig100">
-  <img class="drop-cap" src="the_adventures_of_sherlock_holmes_files/drop_i.jpg" alt="" width="100" height="99">
+  <img class="drop-cap" src="1_files/drop_i.jpg" alt="" width="100" height="99">
 </div>
 
 <p class="first-para drop-cap">ISA WHITNEY, brother of the late Elias Whitney, D.D., Principal of the
@@ -5617,7 +5615,7 @@ that, although he wore some dark coat, such as he had started to town
 in, he had on neither collar nor necktie.</p>
 
 <div class="figcenter fig335"><a name="at" id="at"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus134a.jpg" alt="" width="335" height="600">
+<img src="1_files/illus134a.jpg" alt="" width="335" height="600">
 <div class="caption">“AT THE FOOT OF THE STAIRS SHE MET THIS LASCAR
 SCOUNDREL.”</div>
 </div>
@@ -6351,7 +6349,7 @@ THE ADVENTURE OF THE BLUE CARBUNCLE</h2>
 
 
 <div class="fig100">
-  <img class="drop-cap" src="the_adventures_of_sherlock_holmes_files/drop_i.jpg" alt="" width="100" height="99">
+  <img class="drop-cap" src="1_files/drop_i.jpg" alt="" width="100" height="99">
 </div>
 
 <p class="first-para drop-cap">I HAD called upon my friend Sherlock Holmes upon the second morning
@@ -7155,7 +7153,7 @@ into the open market? Tell us the truth, for there lies your only hope
 of safety.”</p>
 
 <div class="figcenter fig400"><a name="have" id="have"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus172a.jpg" alt="" width="400" height="502">
+<img src="1_files/illus172a.jpg" alt="" width="400" height="502">
 <div class="caption">“‘HAVE MERCY!’ HE SHRIEKED”</div>
 </div>
 
@@ -7293,7 +7291,7 @@ feature.”</p>
 THE ADVENTURE OF THE SPECKLED BAND</h2>
 
 <div class="fig100">
-  <img class="drop-cap2" src="the_adventures_of_sherlock_holmes_files/drop_o.jpg" alt="" width="100" height="98">
+  <img class="drop-cap2" src="1_files/drop_o.jpg" alt="" width="100" height="98">
 </div>
 
 <p class="first-para drop-cap2">ON glancing over my notes of the seventy odd cases in which I have
@@ -8145,7 +8143,7 @@ Miss Stoner, laying her hand upon my companion’s sleeve.</p>
 died from some sudden fright.”</p>
 
 <div class="figcenter fig379"><a name="good" id="good"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus196a.jpg" alt="" width="379" height="600">
+<img src="1_files/illus196a.jpg" alt="" width="379" height="600">
 <div class="caption">“‘GOOD-BYE, AND BE BRAVE’”</div>
 </div>
 
@@ -8456,7 +8454,7 @@ conscience.”</p>
 THE ADVENTURE OF THE ENGINEER’S THUMB</h2>
 
 <div class="fig100">
-  <img class="drop-cap2" src="the_adventures_of_sherlock_holmes_files/drop_o.jpg" alt="" width="100" height="98">
+  <img class="drop-cap2" src="1_files/drop_o.jpg" alt="" width="100" height="98">
 </div>
 
 <p class="first-para drop-cap2">OF all the problems which have been submitted to my friend Mr. Sherlock
@@ -8852,7 +8850,7 @@ winds, ate a hearty supper, drove to Paddington, and started off,
 having obeyed to the letter the injunction as to holding my tongue.</p>
 
 <div class="figcenter fig400"><a name="not" id="not"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus214a.jpg" alt="" width="400" height="557">
+<img src="1_files/illus214a.jpg" alt="" width="400" height="557">
 <div class="caption">“‘NOT A WORD TO A SOUL’”</div>
 </div>
 
@@ -9382,7 +9380,7 @@ being excellent company for the remainder of your existence.”</p>
 THE ADVENTURE OF THE NOBLE BACHELOR</h2>
 
 <div class="fig100">
-  <img class="drop-cap" src="the_adventures_of_sherlock_holmes_files/drop_t.jpg" alt="" width="100" height="101">
+  <img class="drop-cap" src="1_files/drop_t.jpg" alt="" width="100" height="101">
 </div>
 
 <p class="first-para drop-cap">THE Lord St. Simon marriage, and its curious termination, have long
@@ -10305,7 +10303,7 @@ the result when viewed, for instance, by Mr. Lestrade, of Scotland
 Yard.”</p>
 
 <div class="figcenter fig504"><a name="will" id="will"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus250a.jpg" alt="" width="504" height="400">
+<img src="1_files/illus250a.jpg" alt="" width="504" height="400">
 <div class="caption">“‘I WILL WISH YOU ALL A VERY GOOD NIGHT.’”</div>
 </div>
 
@@ -10382,7 +10380,7 @@ still to solve is how to while away these bleak autumnal evenings.”</p>
 THE ADVENTURE OF THE BERYL CORONET</h2>
 
 <div class="fig100">
-  <img class="drop-cap2" src="the_adventures_of_sherlock_holmes_files/drop_h.jpg" alt="" width="100" height="100">
+  <img class="drop-cap2" src="1_files/drop_h.jpg" alt="" width="100" height="100">
 </div>
 
 <p class="first-para drop-cap2">“HOLMES,” said I, as I stood one morning in our bow-window looking down
@@ -11416,7 +11414,7 @@ journeyed down to Streatham, and saw that they exactly fitted the
 tracks.”</p>
 
 <div class="figcenter fig400"><a name="clapped" id="clapped"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus278a.jpg" alt="" width="400" height="540">
+<img src="1_files/illus278a.jpg" alt="" width="400" height="540">
 <div class="caption">“I CLAPPED A PISTOL TO HIS HEAD”</div>
 </div>
 
@@ -11464,7 +11462,7 @@ punishment.”</p>
 THE ADVENTURE OF THE COPPER BEECHES</h2>
 
 <div class="fig100">
-  <img class="drop-cap2" src="the_adventures_of_sherlock_holmes_files/drop_t.jpg" alt="" width="100" height="101">
+  <img class="drop-cap2" src="1_files/drop_t.jpg" alt="" width="100" height="101">
 </div>
 
 <p class="first-para drop-cap2">“TO the man who loves art for its own sake,” remarked Sherlock Holmes,
@@ -11989,7 +11987,7 @@ of Lord Southerton’s preserves. A clump of copper beeches immediately
 in front of the hall door has given its name to the place.</p>
 
 <div class="figcenter fig400"><a name="delighted" id="delighted"></a>
-<img src="the_adventures_of_sherlock_holmes_files/illus292a.jpg" alt="" width="400" height="456">
+<img src="1_files/illus292a.jpg" alt="" width="400" height="456">
 <div class="caption">“‘I AM SO DELIGHTED THAT YOU HAVE COME’”</div>
 </div>
 
