--- a/homepage/good.html
+++ b/homepage/good.html
@@ -3,55 +3,92 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            .main {
-                width: 70%;
-                overflow: hidden;
-            }
-            .sidebar {
-                margin-left: 70%;
-                float: right;
-            }
-            .navbar {
-                overflow: hidden;
-                background-color: black;
-                width: 60%;
-            }
-            .navbar a {
-                color: white;
-                text-align: center;
-                padding: 14px 16px;
-                float: left;
-            }
-            .navbar a:hover {
-                background-color: red;
-            }
-        </style>
+        <link rel="stylesheet" href="good.css">
     </head>
     <body>
-        <div class="navbar">
-            <a href="#home">Who am I?</a>
-            <a href="#home">History</a>
-            <a href="#home">What do I have to offer?</a>
-        </div>
+        <h1> Felipe </h1>
+        <img src="profile_picture.jpg">
+        <ul>
+            <li><a href="https://github.com/3662">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/felipe-rodriguez-atuesta-86a5281ba/">Linkedin</a></li>
+            <li><a href="https://steamcommunity.com/profiles/76561198111189401/">Steam</a></li>
+        </ul>
 
-        <div class="main">
+        <div class="container">
             <h1> Who am I? </h1>
-            <p> Explain who am I </p>
-            <p> Add a photo </p>
+            <div class="section1">
+                <p> 
+                    Hello! My name is Felipe. I am an honors student at the University of Alberta pursuing 
+                    a BSc in computing science. During my program, I took an interest 
+                    in reinforcement learning, algorithms and games. I became particularly 
+                    interested in AI in games as it combines my favorite areas of study. 
+                    I enjoy working on projects that involve designing games, developing 
+                    AI in videogames and developing computer programs that play board games 
+                    such as Go. During my free time I like to play videogames and watch 
+                    football games.   
+                </p>
+            </div>
+            <div class="section2">
+                <h1> My history </h1>
+                <h2> Work Experience </h2>
+                <h3> Software Developer Co-op at Willowglen Systems </h3>
+                <p> 
+                    Willowglen Systems develops various industrial automation solutions 
+                    including a SCADA host system used to monitor railways. During my 
+                    internship I worked on the following tasks:
+                </p>
+                <p> - Helped improve the prediction accuracy for train arrivals made by the Train Prediction Module in our SCADA system. </p>
+                <p> - Designed and developed tools to process and analyze train prediction data using Python and the Pandas library. </p>
+                <p> - Made prediction accuracy reports upon a client’s request. </p>
+                <p> - Developed SCADA modules using JavaScript and C++. </p>
+                <p> - Wrote and updated documentation.  </p>
+                <p> - Fixed bugs. </p>
 
-            <h1> History </h1>
-            <h2> As a student </h2>
-            <p> As a student </p>
-            <h2> As a profesional </h2>
-            <p> As a professional </p>
+                <h2> Certificates </h2>
+                <h3> Certificate in Computer Game Development </h3>
+                <p> I will obtain this certificate upon graduation on June 2022. </p>
+                <p>
+                    This is a joint certificate between the Faculty of Science and the 
+                    Faculty of Arts at the University of Alberta and focuses on interdisciplinary 
+                    teamwork. The certificate begins with five intermediate courses that teach game 
+                    and design principles, and culminates in a capstone course where teams develop 
+                    a complete game using a commercial game engine such as Unity.  
+                </p>
 
-            <h1> What do I have to offer? </h1>
-            <p> What do I have to offer? </p>
+                <h2> Courses </h2>
+                <p> The following is a list of my favorite courses taken during my program (in no particular order): </p>
+                <p> - CMPUT 204 - Algorithms I </p>
+                <p> - CMPUT 304 - Algorithms II </p>
+                <p> - CMPUT 403 - Practical Algorithmics </p>
+                <p> - CMPUT 350 - Advanced Games Programming </p>
+                <p> - CMPUT 355 - Games, Puzzles, Algorithms </p>
+                <p> - CMPUT 455 - Search, Knowledge and Simulation </p>
+                <p> - CMPUT 366 - Intelligent Systems </p>
+                <p> - CMPUT 291 - Introduction to File and Database Management </p>
+                <p> - CMPUT 404 - Web Applications and Architecture </p>
+            </div>
+            <div class="section3">
+                <h1> What do I have to offer? </h1>
+                <p>
+                    I have hands-on experience working in team projects related to software engineering, 
+                    videogame AI and videogame design, as well as formal experience as a software developer. 
+                    I know how to apply concepts related to object-oriented design, user interface, design 
+                    patterns, unit testing and good software engineering practices during development. 
+                </p>
+                <p>
+                    I also have knowledge in algorithm design and analysis and know how to apply it
+                    to efficiently solve everyday problems.
+                </p>
+            </div>
+    
         </div>
         <div class="sidebar">
-            <h1> Important things about me </h1> 
-            <p> What is important about me? </p>
+            <h1> Important points about me </h1> 
+            <p> - BSc Honors in Computing Science </p>
+            <p> - Cumulative GPA: 3.6 </p>
+            <p> - Dean's Honor Roll </p>
+            <p> - Science Internship Program </p>
+            <p> - Certificate in Computer Game Development </p>
         </div>
     </body>
 </html>
