ready to submit

--- a/homepage/good.html
+++ b/homepage/good.html
@@ -61,6 +61,7 @@
                 <p> - CMPUT 350 - Advanced Games Programming </p>
                 <p> - CMPUT 355 - Games, Puzzles, Algorithms </p>
                 <p> - CMPUT 455 - Search, Knowledge and Simulation </p>
+                <p> - CMPUT 497 - Introduction to Combinatorial Game Theory </p>
                 <p> - CMPUT 366 - Intelligent Systems </p>
                 <p> - CMPUT 291 - Introduction to File and Database Management </p>
                 <p> - CMPUT 404 - Web Applications and Architecture </p>
@@ -78,7 +79,7 @@
                     to efficiently solve everyday problems.
                 </p>
             </div>
-    
+            <footer> <small>&copy; Copyright 2022, Felipe Rodriguez Atuesta</small> </footer>
         </div>
         <div class="sidebar">
             <h1> Important points about me </h1> 
